--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>직업 경매 시스템</title>
+    <title>경매 시스템</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>직업 경매</h1>
+    <div class="toggle-switch">
+        <input type="checkbox" id="toggle-dark-mode" onchange="toggleDarkMode()">
+        <label for="toggle-dark-mode"></label>
+    </div>
+    <h1>경매</h1>
     <form id="jobForm">
         <label for="name">이름:</label>
         <input type="text" id="name" name="name" required>
@@ -38,8 +42,12 @@
     <!-- 앱 로직 -->
     <script src="app.js"></script>
 
-    <!-- 관리자 인증 로직 -->
+    <!-- 다크 모드 스크립트 -->
     <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle("dark-mode");
+        }
+
         function verifyAdmin() {
             const answer = prompt("관리자 인증 질문: 2x=10 일 때 x는 몇인가요?");
             if (answer === "5") {
