--- a/admin.html
+++ b/admin.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 다크 모드 토글 버튼 -->
     <div class="toggle-switch">
         <input type="checkbox" id="toggle-dark-mode" onchange="toggleDarkMode()">
         <label for="toggle-dark-mode"></label>
     </div>
+
     <h1>관리자 페이지</h1>
     <div class="input-group">
         <input type="text" id="adminClassId" placeholder="학급 입력">
@@ -35,7 +37,16 @@
     <script>
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
+            const isDarkMode = document.body.classList.contains("dark-mode");
+            localStorage.setItem("darkMode", isDarkMode ? "enabled" : "disabled");
         }
+
+        window.addEventListener("DOMContentLoaded", () => {
+            const darkMode = localStorage.getItem("darkMode");
+            if (darkMode === "enabled") {
+                document.body.classList.add("dark-mode");
+            }
+        });
     </script>
 </body>
 </html>
