--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
         <button onclick="filterByClass()">조회</button>
     </div>
     <div class="results" id="results">
-        <!-- 결과가 여기에 표시됩니다. -->
+        <!-- JavaScript에서 자동으로 응모 항목별로 구분되어 출력됩니다. -->
     </div>
 
     <!-- Firebase SDKs -->
