--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
 
     <!-- 관리자 페이지로 이동 버튼 -->
-    <button class="small" id="adminButton" onclick="verifyAdmin()">관리자 페이지로 이동</button>
+    <button class="small admin-button" id="adminButton" onclick="verifyAdmin()">관리자 페이지로 이동</button>
 
     <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
